[gd_scene load_steps=4 format=3 uid="uid://77v2uflnapir"]

[ext_resource type="Script" uid="uid://b2311j0pjck28" path="res://Scripts/Interfaz/menu_inicio.gd" id="1_qb7yg"]
[ext_resource type="FontFile" uid="uid://c70w8hiljv1w" path="res://Scenes/UI/Fuentes_UI/PixelOperator8.ttf" id="3_mluov"]

[sub_resource type="LabelSettings" id="LabelSettings_xiko7"]
font = ExtResource("3_mluov")
font_size = 48
outline_size = 24
outline_color = Color(0, 0, 0, 1)

[node name="MenuInicio" type="CanvasLayer"]
process_mode = 3
layer = 2
script = ExtResource("1_qb7yg")

[node name="Contenedor" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(900, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -104.0
offset_right = 450.0
offset_bottom = 104.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Texto" type="Label" parent="Contenedor"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 64
text = "menuin_lab_titulo"
label_settings = SubResource("LabelSettings_xiko7")
horizontal_alignment = 1
autowrap_mode = 2
text_direction = 1

[node name="Ajustes" type="Button" parent="Contenedor"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_mluov")
theme_override_font_sizes/font_size = 32
text = "menuin_btn_ajustes"

[node name="Cerrar" type="Button" parent="Contenedor"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_mluov")
theme_override_font_sizes/font_size = 32
text = "menuin_btn_cerrar"

[node name="Salir" type="Button" parent="Contenedor"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_mluov")
theme_override_font_sizes/font_size = 32
text = "menuin_btn_salir"

[node name="FilaSalir" type="HBoxContainer" parent="Contenedor"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10

[node name="Si" type="Button" parent="Contenedor/FilaSalir"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_mluov")
theme_override_font_sizes/font_size = 32
text = "menuin_btn_si"

[node name="No" type="Button" parent="Contenedor/FilaSalir"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_mluov")
theme_override_font_sizes/font_size = 32
text = "menuin_btn_no"

[connection signal="pressed" from="Contenedor/Ajustes" to="." method="_on_ajustes_pressed"]
[connection signal="pressed" from="Contenedor/Cerrar" to="." method="_on_cerrar_pressed"]
[connection signal="pressed" from="Contenedor/Salir" to="." method="_on_salir_pressed"]
[connection signal="pressed" from="Contenedor/FilaSalir/Si" to="." method="_on_si_pressed"]
[connection signal="pressed" from="Contenedor/FilaSalir/No" to="." method="_on_no_pressed"]
